<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimens_125"
        android:layout_height="@dimen/dimens_125"
        android:layout_margin="@dimen/margin_16"
        android:src="@drawable/carrinho_supermercado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="233dp"
        android:layout_height="126dp"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/descricao_app"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/edit_NomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/nome_produto"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_Quantidade"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_16"
        android:layout_height="wrap_content"
        android:hint="@string/quantidade"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/edit_valorUnitario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/valor_unitario"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_NomeProduto"
        app:layout_constraintVertical_bias="0.184"
        tools:layout_editor_absoluteX="33dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cor_terciaria"
        android:text="@string/button_calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_valorUnitario"
        app:layout_constraintVertical_bias="0.531"
        tools:layout_editor_absoluteX="-144dp"
        android:layout_margin="@dimen/margin_16"/>

</androidx.constraintlayout.widget.ConstraintLayout>